Fixed bizarre element width overflow. Absolutely positioned element had all four directions anchored

--- a/css/main.css
+++ b/css/main.css
@@ -68,9 +68,8 @@ a {
         content: "";
         position: absolute;
         top: 0;
-        bottom: 0;
         left:0;
-        right:0;
+        width: 100vw;
     }
     .slide, .slide:before {
         background: 50% 50% / cover;
